fix: allow overflow-y

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@ html, body {
     width: 100%;
     height: 100%;
 
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
 }
@@ -18,7 +18,7 @@ a {
 }
 
 header, footer {
-    overflow: hidden;
+    overflow-x: hidden;
     width: 90%;
     height: 5%;
 }
